--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ In the fall of 2016 I held a Visiting Researcher position at
 <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a>.
 I received my PhD
 <!--(summa cum laude)-->
-from <a href="https://saarland-informatics-campus.de/en/">Saarland
+from <a href="https://saarland-informatics-campus.de/en/forschung-research/">Saarland
 University</a> in Saarbrücken, Germany.
 <!--  where I -->
 <!-- <\!-- was a member of -->
