--- a/index.html
+++ b/index.html
@@ -635,6 +635,12 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation</em></a>
+    <ul style="font-size: small">
+      <li><b>Recent:</b> Invited Keynote talk at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex"><em>What is secure compilation?</em>
     <ul style="font-size: small">
       <li><b>Recent:</b> Discussion at <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>:
@@ -648,9 +654,9 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
-      <li><b>Recent:</b> <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
-      <li><b>Recent:</b> <a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
+      <li>DARPA SSITH/HOPE PI meeting: <a href="talks/2018-05-30-When-Good-Components-Go-Bad-SSITH-PI-Meeting.pdf">slides</a> (2018-05-30)</li>
+      <li><a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>: <a href="talks/2018-05-17-When-Good-Components-Go-Bad-Dagstuhl.pdf">slides</a> (2018-05-17)</li>
+      <li><a href="https://www.irif.fr/seminaires/verif/index">IRIF Verification Seminar</a>, Paris 7: <a href="talks/2018-02-26-Secure-Compilation-IRIF.pdf">slides</a> (2018-02-26)</li>
       <li><a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
 IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a>, <b><a href="https://videos-rennes.inria.fr/video/BkHzYy-jM">video</a></b> (2018-02-05)</li>
       <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
