--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@ University</a> in Saarbrücken, Germany.
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium</a> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
-  <ul>
-  <li>Conference: June 18-20, 2018. Iasi, Romania</li>
-  </ul>
+  <!-- <ul> -->
+  <!-- <li>Conference: June 18-20, 2018. Iasi, Romania</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a> (PC member)
