--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@ University</a> in Saarbrücken, Germany.
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</b></a> (PC member)
   <ul>
-  <li>Submission deadline: May 8, 2018</li>
+  <!-- <li>Submission deadline: 8 May, 2018</li> -->
   <li>Conference: 15-19 October 2018, Toronto, Canada</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Formally Secure Compilation course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a></b>
   <ul>
-  <li>Application deadline: June 23, 2018</li>
+  <li>Application deadline: 1 July, 2018</li>
   <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li>
   </ul>
   </li>
