--- a/index.html
+++ b/index.html
@@ -81,12 +81,6 @@ University</a> in Saarbrücken, Germany.
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a></b>
-  <ul>
-  <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</b></a> (PC member)
   <ul>
   <!-- <li>Submission deadline: 8 May, 2018</li> -->
@@ -123,6 +117,12 @@ University</a> in Saarbrücken, Germany.
   <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium</a> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
   <!-- <ul> -->
   <!-- <li>Conference: June 18-20, 2018. Iasi, Romania</li> -->
+  <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/epit2018/">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</b>
+  <!-- <ul> -->
+  <!-- <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li> -->
   <!-- </ul> -->
   </li>
 
