--- a/index.html
+++ b/index.html
@@ -75,12 +75,6 @@ University</a> in Saarbrücken, Germany.
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</b></a> (Co-Organizer)
-  <ul>
-  <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</b></a> (PC member)
   <ul>
   <!-- <li>Submission deadline: 8 May, 2018</li> -->
@@ -117,6 +111,12 @@ University</a> in Saarbrücken, Germany.
   <li style="margin-bottom: 1ex;"><a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium</a> (Invited Speaker<!-- , <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> -->)
   <!-- <ul> -->
   <!-- <li>Conference: June 18-20, 2018. Iasi, Romania</li> -->
+  <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.dagstuhl.de/18201">Dagstuhl Seminar 18201 on Secure Compilation</a> (Co-Organizer)
+  <!-- <ul> -->
+  <!-- <li>Seminar: 13-18 May, 2018, Schloss Dagstuhl, Germany</li> -->
   <!-- </ul> -->
   </li>
 
