--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (PhD Student, Inria Paris)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, Inria Paris)</li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a> (Postdoctoral Researcher)</li>
@@ -416,8 +418,6 @@ MPRI website</a>.</p>
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a> (Research Intern, Orléans University)</li>
 
