--- a/index.html
+++ b/index.html
@@ -435,6 +435,18 @@ MPRI website</a>.</p>
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
+
+  <li style="margin-bottom: 1ex;">
+    Carmine Abate,
+    Roberto Blanco,
+    Deepak Garg,
+    C&#259;t&#259;lin Hri&#355;cu,
+    Marco Patrignani, and
+    Jérémy Thibault,
+    <b><a href="https://arxiv.org/abs/1803.06547">Exploring Robust Property Preservation for Secure Compilation</a></b>.
+    <!-- arXiv:1803.06547. --> July, 2018.
+  </li>
+
   <li style="margin-bottom: 1ex;">
     Guido Martínez,
     Danel Ahman,
@@ -449,10 +461,8 @@ MPRI website</a>.</p>
     Tahina Ramananandro,
     Aseem Rastogi,
     Nikhil Swamy,
-    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier</a></b>.
+    <b><a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof automation with SMT, Tactics, and Metaprograms</a></b>.
     arXiv:1803.06547. March, 2018.
-    <!-- In <a href="https://conf.researchr.org/home/icfp-2017">22nd ACM SIGPLAN International Conference on -->
-    <!-- Functional Programming (ICFP)</a>, PACMPL, 1(ICFP):17:1–17:29, September 2017. -->
   </li>
 
   <li style="margin-bottom: 1ex;">
