--- a/index.html
+++ b/index.html
@@ -445,6 +445,11 @@ MPRI website</a>.</p>
     Jérémy Thibault,
     <b><a href="https://arxiv.org/abs/1803.06547">Exploring Robust Property Preservation for Secure Compilation</a></b>.
     <!-- arXiv:1803.06547. --> July, 2018.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Supplementary materials including Coq development</a>
+      <li>A previous extended abstract was called
+          <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -484,16 +489,6 @@ MPRI website</a>.</p>
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07308">Formally Secure Compilation of Unsafe Low-Level Components</a></li>
     </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-            Deepak Garg,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Marco Patrignani,
-            Marco Stronati, and
-            David Swasey.
-    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
-            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
