--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Marco Patrignani, and
     Jérémy Thibault,
-    <b><a href="https://arxiv.org/abs/1803.06547">Exploring Robust Property Preservation for Secure Compilation</a></b>.
+    <b><a href="">Exploring Robust Property Preservation for Secure Compilation</a></b>.
     <!-- arXiv:1803.06547. --> July, 2018.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Supplementary materials including Coq development</a>
