--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ University</a> in Saarbrücken, Germany.
 
   <li style="margin-bottom: 1ex;"><b>Formally Secure Compilation course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a></b>
   <ul>
-  <li>Application deadline: 4 July, 2018</li>
+  <!-- <li>Application deadline: 4 July, 2018</li> -->
   <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li>
   </ul>
   </li>
