--- a/students.html
+++ b/students.html
@@ -65,6 +65,15 @@
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2018-07 to 2019-07:<br/>
+     <a href="https://www.fstar-lang.org">F* system for program verification</a></li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
+     <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></li>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-02:
@@ -119,13 +128,6 @@
     <a href="https://arxiv.org/abs/1802.00588">Software-fault isolation backend for secure compilation</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
-  <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
-     <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a>
   <ul>
