--- a/students.html
+++ b/students.html
@@ -36,10 +36,20 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]</div></li>
 
+  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></li>
+  <ul>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-08:
+    Formally secure compilation</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:
+    Formally secure compilation</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]</div></li>
+
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
     <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
      Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
+    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free version 2</a></li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li> -->
@@ -73,13 +83,6 @@
      <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></li>
-  <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-02:
-    Formally secure compilation</li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/floriangru">Florian Groult</a></li>
   <ul>
