--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ MPRI website</a>.</p>
 
 <h2 id="group">Research Group</h2>
 
-<ol style="width:42em; text-align: left">
+<ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a> (PhD Student, ENS Paris)</li>
 
@@ -429,7 +429,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://aaronweiss.us/">Aaron Weiss</a> (Visiting Researcher, Northeastern University)</li>
 
-</ol>
+</ul>
 
 <p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
 
