--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/etanter">Éric Tanter</a> (Visiting Professor, University of Chile)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://pleiad.cl/people/elabrada">Elizabeth Labrada</a> (Research Intern, University of Chile)</li>
+
 </ul>
 
 <p>For a complete list of present and past members of my group please look <a href="students.html">here</a>.</p>
