--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@ University</a> in Saarbrücken, Germany.
   <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
-    Principles of Programming Languages, POPL 2017</a>
-    (PC member)
-  <!-- <ul> -->
-  <!-- <li>Abstract deadline: 1 July 2016</li> -->
-  <!-- <li>Submission deadline: 6 July 2016</li> -->
-  <!-- <li>Conference: 18-20 January 2017, Paris, France</li> -->
-  <!-- </ul> -->
-  </li>
+  <!--   Principles of Programming Languages, POPL 2017</a> -->
+  <!--   (PC member) -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <li>Abstract deadline: 1 July 2016</li> -\-> -->
+  <!-- <\!-- <li>Submission deadline: 6 July 2016</li> -\-> -->
+  <!-- <\!-- <li>Conference: 18-20 January 2017, Paris, France</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://www.etaps.org/index.php/2017/post">Principles of Security and Trust, -->
   <!--     POST 2017</a> (PC member) -->
