--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ University</a> in Saarbrücken, Germany.
   <!-- </ul> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017">
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://conf.researchr.org/home/POPL-2017"> -->
   <!--   Principles of Programming Languages, POPL 2017</a> -->
   <!--   (PC member) -->
   <!-- <\!-- <ul> -\-> -->
