--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ could contribute:
 <ul>
   <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a>
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2017/secomp-mpri.pdf">topics</a>;
+ <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
   </li>
   <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
