--- a/index.html
+++ b/index.html
@@ -63,17 +63,48 @@ University</a> in Saarbrücken, Germany.
 <a href="#misc">Misc</a>
 </p>
 
-<h2>News/Events</h2>
-<ul style="width:42em; text-align: left">
+<h2 id="projects">Current Research Projects</h2>
 
+<!--
+<h2 id="students">Looking for Students and Young Researchers</h2>
+<p style="width:42em; text-align: left">
+
+We are looking for talented, highly motivated students and young
+researchers, for research internships and for PhD, PostDoc, and
+Researcher positions. Here are three of my projects to which students
+could contribute:
+<!--(but there are many other possible ones):--></p>
+
+
+<ul>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">SECOMP ERC Grant on
                                         Efficient Formally Secure Compilers to a Tagged Architecture</a></b>
+(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2017/secomp-mpri.pdf">topics</a>;
+ <a href="https://github.com/secure-compilation">code</a>;
+ <a href="https://secure-compilation.github.io/#publications">papers</a>)
     <ul>
       <li>
-      Always <a href="https://secure-compilation.github.io/#positions">looking for exceptional students and young researchers</a>
+      Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a>
       <!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris --></li>
     </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
+(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>;
+ <a href="https://github.com/FStarLang/FStar">code</a>;
+ <a href="https://www.fstar-lang.org/#papers">papers</a>)
+  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
+  <!-- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>; -->
+  <!--  <a href="http://arxiv.org/abs/1409.0393">paper #1</a>, -->
+  <!--  <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>, -->
+  <!--  <a href="https://arxiv.org/abs/1607.05443">paper #3</a>, -->
+  <!--  <a href="https://github.com/QuickChick">code</a>) -->
+  <!-- </li> -->
+</ul>
+
+<h2>News/Events</h2>
+<ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</b></a> (PC member)
   <ul>
@@ -297,38 +328,6 @@ University</a> in Saarbrücken, Germany.
 Centre de Recherche Inria de Paris,<br/>
 2 rue Simone Iff, CS 42112, 75589 Paris Cedex 12, France</p>
 
-
-<h2 id="projects">Current Research Projects</h2>
-
-<!--
-<h2 id="students">Looking for Students and Young Researchers</h2>
-<p style="width:42em; text-align: left">
-
-We are looking for talented, highly motivated students and young
-researchers, for research internships and for PhD, PostDoc, and
-Researcher positions. Here are three of my projects to which students
-could contribute:
-<!--(but there are many other possible ones):--></p>
-
-<ul>
-  <li style="margin-bottom: 1ex;"><a href="https://secure-compilation.github.io">SECOMP: Efficient Formally Secure Compilers to a Tagged Architecture</a>
-(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2017/secomp-mpri.pdf">topics</a>;
- <a href="https://github.com/secure-compilation">code</a>;
- <a href="https://secure-compilation.github.io/#publications">papers</a>)
-  </li>
-  <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
-(<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>;
- <a href="https://github.com/FStarLang/FStar">code</a>;
- <a href="https://www.fstar-lang.org/#papers">papers</a>)
-  </li>
-  <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
-  <!-- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>; -->
-  <!--  <a href="http://arxiv.org/abs/1409.0393">paper #1</a>, -->
-  <!--  <a href="https://hal.inria.fr/hal-01162898/document">paper #2</a>, -->
-  <!--  <a href="https://arxiv.org/abs/1607.05443">paper #3</a>, -->
-  <!--  <a href="https://github.com/QuickChick">code</a>) -->
-  <!-- </li> -->
-</ul>
 
 <!--
   <ul>
