--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ could contribute:
 
 
 <ul>
-  <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">SECOMP ERC Grant on
+  <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
                                         Efficient Formally Secure Compilers to a Tagged Architecture</a></b>
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2017/secomp-mpri.pdf">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
