--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ could contribute:
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
     <ul>
       <li>
-      Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a>
+      <b>Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a></b>
       <!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris --></li>
     </ul>
   </li>
