--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ University</a> in Saarbrücken, Germany.
 <a href="#misc">Misc</a>
 </p>
 
-<h2 id="projects">Current Research Projects</h2>
+<h2 id="projects">Research Projects</h2>
 
 <!--
 <h2 id="students">Looking for Students and Young Researchers</h2>
