--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ could contribute:
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: From Program Verification System to Proof Assistant</a></b>
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
