--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@ could contribute:
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar.pdf">topics</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
+    <ul>
+      <li>
+      <b>Looking for one M2 intern and one Post-Doctoral Researcher on this project</a></b>
+      <!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris --></li>
+    </ul>
   </li>
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
   <!-- (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/quick-chick.pdf">topics</a>; -->
