--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a></b>
-  <ul>
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a></b>
+  <!-- <ul> -->
   <!-- <li>Application deadline: 4 July, 2018</li> -->
-  <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li>
-  </ul>
+  <!-- <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li> -->
+  <!-- </ul> -->
   </li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
@@ -183,10 +183,10 @@ could contribute:
   <!-- </ul> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC 2018</a> (PC Chair, Co-organizer)
+  <li style="margin-bottom: 1ex;"><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC @ POPL 2018</a> (PC Chair, Co-organizer)
   <ul>
   <!-- <li>Submission deadline: 18 October 2017</li> -->
-  <li>Workshop at POPL: 13 January 2018, Los Angeles, USA</li>
+  <!-- <li>Workshop at POPL: 13 January 2018, Los Angeles, USA</li> -->
   </ul>
   </li>
 
