--- a/index.html
+++ b/index.html
@@ -124,13 +124,6 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a></b>
-  <!-- <ul> -->
-  <!-- <li>Application deadline: 4 July, 2018</li> -->
-  <!-- <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li> -->
-  <!-- </ul> -->
-  </li>
-
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
@@ -142,6 +135,13 @@ could contribute:
   <!-- 8-13 January 2018, Los Angeles, USA https://popl18.sigplan.org/ -->
   <li>Conference: 6-12 January 2019, Lisbon, Portugal</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a>
+  <!-- <ul> -->
+  <!-- <li>Application deadline: 4 July, 2018</li> -->
+  <!-- <li>School: 27 August - 1 September, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a></li> -->
+  <!-- </ul> -->
   </li>
 
   <!-- <li style="margin-bottom: 1ex;">Awarded <a href="http://www.agence-nationale-recherche.fr/informations/actualites/detail/appel-a-projets-generique-2016-publication-des-premiers-resultats/">Young Researcher grant (JCJC) from the French National Research<br/> Agency (ANR)</a> on <i>QuickChick: Property-based Testing for Coq</i>, July 2016</li> -->
