--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ University</a> in Saarbrücken, Germany.
 
 <p>
 <b>Quick Links:</b>
-<a href="#projects">Projects</a>;
+<!-- <a href="#projects">Projects</a>; -->
 <a href="#contact">Contact</a>;
 <a href="#interests">Interests</a>;
 <a href="#group">Group</a>;
