--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ could contribute:
 
 <h2 id="contact">Contact</h2>
 <p><i>E-mail (preferred):</i> <a href="mailto:catalin.hritcu@gmail.com">catalin.hritcu@gmail.com</a></p>
-<p><i>New address:</i>
+<p><i>Current address:</i>
   <a href="https://www.google.com/maps/place/Rue+Simone+IFF,+75012+Paris,+France/">2 rue Simone Iff, 75012 Paris, France</a> (<a href="https://www.inria.fr/en/centre/paris/overview/how-to-reach-us">How to reach us</a>)</p>
 <p><i>Equivalent Address (address above is so new that mapping applications might not know it):</i><br/>
   <a href="https://www.google.com/maps/place/43+Rue+du+Charolais,+75012+Paris,+France/">43 Rue du Charolais, 75012 Paris, France</a></p>
