--- a/index.html
+++ b/index.html
@@ -788,41 +788,29 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-    <a href="https://www.fstar-lang.org">F*: From Program Verification System
-      to Proof Assistant</a> (with Nikhil Swamy,
-Alejandro Aguirre,
-Danel Ahman,
-Benjamin Beurdouche,
-Karthikeyan Bhargavan,
-Antoine Delignat-Lavaud,
-Cédric Fournet,
-Chantal Keller,
-Guido Martínez,
-Gordon Plotkin,
-Jonathan Protzenko,
-Aseem Rastogi,
-Peng (Perry) Wang,
-Santiago Zanella-Béguelin,
-Jean-Karim Zinzindohoue)</li>
+    <a href="https://github.com/secure-compilation">ERC SECOMP: Efficient Formally Secure Compilation</a></li>
+
+  <li style="margin-bottom: 1ex;">
+    <a href="https://github.com/FStarLang">F*: Program Verification System for Effectful Programs</a> <!-- (with Nikhil Swamy, etal) --></li>
 
   <li style="margin-bottom: 1ex;">
     <a href="https://github.com/micro-policies">Micro-Policies:
       Formally Verified, Tag-Based Security Monitors</a>
-      (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan,
-       Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce,
-       Antal Spector-Zabusky, and Andrew Tolmach)</li>
+      <!-- (with Arthur Azevedo de Amorim, André DeHon, Maxime Dénès, Udit Dhawan, -->
+      <!--  Nick Giannarakis, Yannis Juglaret, Benjamin C. Pierce, -->
+      <!--  Antal Spector-Zabusky, and Andrew Tolmach) --></li>
 
-  <li style="margin-bottom: 1ex;">
-    <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a>
-    (with Leonidas Lampropoulos, Diane Gallois-Wong,
-     John Hughes, Benjamin C. Pierce, and Li-yao Xia)</li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   <a href="https://arxiv.org/abs/1607.05443">Luck: A Domain Specific Language For Property-Based Generators</a> -->
+  <!--   (with Leonidas Lampropoulos, Diane Gallois-Wong, -->
+  <!--    John Hughes, Benjamin C. Pierce, and Li-yao Xia)</li> -->
 
-  <li style="margin-bottom: 1ex;">
-    <a href="https://github.com/QuickChick">QuickChick:
-      Property-based testing plugin for Coq, including
-      a foundational verification framework for testing code</a>
-      (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou,
-       and Benjamin C. Pierce)</li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   <a href="https://github.com/QuickChick">QuickChick: -->
+  <!--     Property-based testing plugin for Coq, including -->
+  <!--     a foundational verification framework for testing code</a> -->
+  <!--     (with Maxime Dénès, Leonidas Lampropoulos, Zoe Paraskevopoulou, -->
+  <!--      and Benjamin C. Pierce)</li> -->
 
 </ul>
 
