--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ MPRI website</a>.</p>
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
-           arXiv:1802.00588. February 2018.
+           In <a href="https://ccs2018.sigsac.org/">25th ACM Conference on Computer and Communications Security (CCS)</a>, October 2018.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
       <li>A previous extended abstract was called
