--- a/students.html
+++ b/students.html
@@ -185,7 +185,7 @@
   </ul>
     <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
+  <li style="margin-bottom: 1ex;"><a href="http://www.lix.polytechnique.fr/Labo/Simon.Forest/">Simon Forest</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2015-03 to 2015-08:
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
