--- a/index.html
+++ b/index.html
@@ -116,14 +116,7 @@ could contribute:
 
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</a></b> (PC member)
-  <ul>
-  <!-- <li>Submission deadline: 8 May, 2018</li> -->
-  <li>Conference: 15-19 October 2018, Toronto, Canada</li>
-  </ul>
-  </li>
-
+  
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
@@ -135,6 +128,20 @@ could contribute:
   <!-- 8-13 January 2018, Los Angeles, USA https://popl18.sigplan.org/ -->
   <li>Conference: 6-12 January 2019, Lisbon, Portugal</li>
   </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://secdev.ieee.org/2019/">IEEE Cybersecurity Development Conference, SecDev 2019</a></b> (PC member)
+  <ul>
+  <!-- <li>Submission deadline: 8 May, 2018</li> -->
+  <li>Conference: 25 - 27 September 2019, McLean, VA, USA</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</a></b> (PC member)
+  <!-- <ul> -->
+  <!-- <\!-- <li>Submission deadline: 8 May, 2018</li> -\-> -->
+  <!-- <li>Conference: 15-19 October 2018, Toronto, Canada</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD 2018)</a>
