--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</a></b> (PC member)
+  <li style="margin-bottom: 1ex;"><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</a> (PC member)
   <!-- <ul> -->
   <!-- <\!-- <li>Submission deadline: 8 May, 2018</li> -\-> -->
   <!-- <li>Conference: 15-19 October 2018, Toronto, Canada</li> -->
