--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p style="width:42em; text-align: left">
 <!-- Starting in October 2013 -->
-Researcher (tenured, <a href="http://en.wikipedia.org/wiki/Academic_rank_in_France#Research_positions">chargé de recherche</a>)
+Researcher (tenured, <a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">chargé de recherche</a>)
 at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
 in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a>.</p>
 
@@ -459,7 +459,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Marco Patrignani, and
     Jérémy Thibault,
-    <b><a href="http://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
+    <b><a href="http://arxiv.org/abs/1807.04603rc">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     arXiv:1807.04603. July, 2018.
     <ul style="font-size: small">
