--- a/index.html
+++ b/index.html
@@ -657,6 +657,16 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="">Tezos Paris</a>: <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a> (2018-11-14)</li>
+      <li>Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
+    </ul>
+
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>When Good Components Go Bad</em></a>
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security, CCS 2018</a>: <a href="talks/2018-10-18-When-Good-Components-Go-Bad-CCS.pdf">slides</a> (2018-10-18)</li>
@@ -700,16 +710,6 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
     <ul style="font-size: small">
       <li>Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
-    </ul>
-
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
-
-    <ul style="font-size: small">
-      <li><a href="">Tezos Paris</a>: <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a> (2018-11-14)</li>
-      <li>Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
-      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
 
   </li>
