--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ could contribute:
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Program Verification System for Effectful Programs</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.fstar-lang.org/">F*: Verification Language for Effectful Programs</a></b>
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2018/fstar-topics.pdf">topics</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://www.fstar-lang.org/#papers">papers</a>)
