--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ could contribute:
 
 <ul>
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
-                                        Efficient Formally Secure Compilation</a></b>
+                                        Formally Secure Compilation</a></b>
 (<a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/habil/catalin_habil.pdf#page=80">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
