--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ MPRI website</a>.</p>
     C&#259;t&#259;lin Hri&#355;cu,
     Marco Patrignani, and
     Jérémy Thibault,
-    <b><a href="http://arxiv.org/abs/1807.04603rc">Journey Beyond Full Abstraction:
+    <b><a href="http://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction:
       Exploring Robust Property Preservation for Secure Compilation</a></b>.
     arXiv:1807.04603. July, 2018.
     <ul style="font-size: small">
